fix stretching issue on profile pic

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -207,9 +207,10 @@ ul#nav li.current a { color: #F06000; }
 }
 #about .profile-pic {
    position: relative;
-   width: 120px;
-   height: 120px;
+   width: 150px;
+   height: 150px;
    border-radius: 100%;
+   object-fit: cover;
 }
 #about .contact-details { width: 41.66667%; }
 #about .download {
